modifying HTML Template

--- a/HTML Template/index.html
+++ b/HTML Template/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Shopee</title>
+    <title>Maraya Zaaki Enterprise</title>
 
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -32,7 +32,7 @@
 
             <!-- Primary Navigation -->
             <nav class="navbar navbar-expand-lg navbar-dark color-second-bg">
-                <a class="navbar-brand" href="#">Mobile Shopee</a>
+                <a class="navbar-brand" href="#">Maraya Zaaki Enterprise</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -648,7 +648,10 @@
                     <div class="card border-0 font-rale mr-5" style="width: 18rem;">
                       <h5 class="card-title font-size-16">Upcoming Mobiles</h5>
                       <img src="../assets/blog/blog1.jpg" alt="cart image" class="card-img-top">
-                      <p class="card-text font-size-14 text-black-50 py-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis non iste sequi cupiditate tempora iure. Velit accusamus saepe harum sed.</p>
+                      <p class="card-text font-size-14 text-black-50 py-1">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Veritatis non iste sequi cupiditate tempora iure. Velit 
+                         accusamus saepe harum sed.</p>
                       <a href="#" class="color-second text-left">Go somewhere</a>
                     </div>
                   </div>
@@ -656,7 +659,10 @@
                     <div class="card border-0 font-rale mr-5" style="width: 18rem;">
                       <h5 class="card-title font-size-16">Upcoming Mobiles</h5>
                       <img src="../assets/blog/blog2.jpg" alt="cart image" class="card-img-top">
-                      <p class="card-text font-size-14 text-black-50 py-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis non iste sequi cupiditate tempora iure. Velit accusamus saepe harum sed.</p>
+                      <p class="card-text font-size-14 text-black-50 py-1">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Veritatis non iste sequi cupiditate tempora iure. Velit
+                         accusamus saepe harum sed.</p>
                       <a href="#" class="color-second text-left">Go somewhere</a>
                     </div>
                   </div>
@@ -664,7 +670,10 @@
                     <div class="card border-0 font-rale mr-5" style="width: 18rem;">
                       <h5 class="card-title font-size-16">Upcoming Mobiles</h5>
                       <img src="../assets/blog/blog3.jpg" alt="cart image" class="card-img-top">
-                      <p class="card-text font-size-14 text-black-50 py-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis non iste sequi cupiditate tempora iure. Velit accusamus saepe harum sed.</p>
+                      <p class="card-text font-size-14 text-black-50 py-1">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Veritatis non iste sequi cupiditate tempora iure. Velit
+                         accusamus saepe harum sed.</p>
                       <a href="#" class="color-second text-left">Go somewhere</a>
                     </div>
                   </div>
@@ -681,8 +690,10 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-3 col-12">
-                <h4 class="font-rubik font-size-20">Mobile Shopee</h4>
-                <p class="font-size-14 font-rale text-white-50">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, deserunt.</p>
+                <h4 class="font-rubik font-size-20">Maraya Zaaki Enterprise</h4>
+                <p class="font-size-14 font-rale text-white-50">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                   Repellendus, deserunt.</p>
               </div>
               <div class="col-lg-4 col-12">
                 <h4 class="font-rubik font-size-20">Newslatter</h4>
@@ -717,7 +728,7 @@
           </div>
         </footer>
         <div class="copyright text-center bg-dark text-white py-2">
-          <p class="font-rale font-size-14">&copy; Copyrights 2020. Desing By <a href="#" class="color-second">Daily Tuition</a></p>
+          <p class="font-rale font-size-14">&copy; Copyrights 2021. Desing By <a href="#" class="color-second">Yenteco</a></p>
         </div>
     <!-- !start #footer -->
 
